added +/- and % button functionality

--- a/src/ButtonPanel.css
+++ b/src/ButtonPanel.css
@@ -1,14 +1,14 @@
-.component-button-panel {
-  background-color: #858694;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  flex: 1 0 auto;
+.ButtonPanel {
+  background-color: black;
+  display:flex-reverse;
+  align-items: center;
+  
 }
 
-.component-button-panel > div {
+/* .component-button-panel > div {
   width: 100%;
   margin-bottom: 1px;
   flex: 1 0 auto;
   display: flex;
 }
+ */
