--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
 .App {
     background-color: black;
-    position:fixed;
+    /* position:fixed;
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 100%;
+    height: 100%; */
+    display: flex-reverse;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.display {
+    display:flex;
+    justify-content: center;
+
+}
+
+.buttonPanel {
+    justify-content: center;
+
 }
