--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,11 @@
     width: 100%;
     height: 100%; */
     display: flex-reverse;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
+    
+
+
 }
 
 .display {
