--- a/src/Button.css
+++ b/src/Button.css
@@ -27,6 +27,22 @@
 }
 
 
+.zero{
+    padding: 1rem;
+    margin: .125rem;
+    color: white;
+    border-radius: 50%;
+    width: 8rem;
+    height: 4rem;
+    /* center all the stuff */
+    display:inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+
+}
+
+
 /* .component-button {
   display: inline-flex;
   width: 25%;
