--- a/src/Button.css
+++ b/src/Button.css
@@ -1,16 +1,14 @@
-.component-button {
+/* .button {
   display: inline-flex;
   width: 25%;
   flex: 1 0 auto;
-}
+} */
 
-.component-button.wide {
-  width: 50%;
-}
+.button
 
-.component-button button {
-  background-color: #e0e0e0;
-  border: 0;
+.asdf {
+  background-color: #989898;
+  border: 1px;
   font-size: 1.5rem;
   margin: 0 1px 0 0;
   flex: 1 0 auto;
@@ -24,4 +22,19 @@
 .component-button.orange button {
   background-color: #f5923e;
   color: white;
+}
+
+.button{
+  width: 100%;
+  background-color: rgba(255,255,255,0.75);
+  cursor: pointer;
+  font-size: 2rem;
+  border: 1px solid white;
+  outline: none;
+  grid-template-columns: repeat(4, 6rem);
+  grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
+
+  /* margin-bottom: 1px;
+  flex: 1 0 auto;
+  display: flex; */
 }
