--- a/src/ButtonPanel.css
+++ b/src/ButtonPanel.css
@@ -1,14 +1,13 @@
-.component-button-panel {
+.buttonpanel {
+  display: grid;
+  cursor: pointer;
+  justify-content: center;
+  grid-template-columns: repeat(4, 6rem);
+  grid-template-rows: minmax(4rem, auto) repeat(5, 3rem);
   background-color: #858694;
-  display: flex;
-  flex-direction: row;
+  /* flex-direction: row;
   flex-wrap: wrap;
-  flex: 1 0 auto;
+  flex: 1 0 auto; */
 }
 
-.component-button-panel > div {
-  width: 100%;
-  margin-bottom: 1px;
-  flex: 1 0 auto;
-  display: flex;
-}
+
