--- a/src/Display.css
+++ b/src/Display.css
@@ -11,3 +11,15 @@
     font-size: 2.5rem;
     padding: 0.2rem 0.7rem 0.1rem 0.5rem;
   }
+
+  .display{
+    grid-column: 1/-1;
+    background-color: rgba(0,0,0, 0.75);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: 0.75rem;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
